ensured temperature text on grey and graph is visible

--- a/widgets/rickshawgraph/rickshawgraph.scss
+++ b/widgets/rickshawgraph/rickshawgraph.scss
@@ -66,7 +66,7 @@ $tick-color:        rgba(0, 0, 0, 0.4);
   .title, .value {
     position: relative;
     z-index: 99;
-    padding-top: 7px;
+    padding-top: 9px;
   }
 
   .title {
